@@ -164,5 +164,9 @@ equip_skill_break_rate: 100
 // NOTE: The official setting is yes, even thought it degrades performance a bit.
 delay_battle_damage: yes
 
-// Are arrows are consumed when used on a bow? (Note 1)
-arrow_decrement: yes
+// Are arrows/ammo consumed when used on a bow/gun?
+// 0 - No, 1 - Yes
+// 2 - Yes even for skills that do not specify arrow consumption when said 
+//     skill is weapon-based and used with ranged weapons (auto-guesses which 
+//     skills should consume ammo when it's acquired via a card or plagiarize)
+arrow_decrement: 1
